Enhance FHIR functionality and improve code structure

--- a/irishealth/installer/App.Installer.cls
+++ b/irishealth/installer/App.Installer.cls
@@ -34,6 +34,8 @@ ClassMethod SetupSuperUser()
         Set user.NameSpace = namespace
         Do user.%Save()
     }
+
+    Return $$$OK
 }
 
 ClassMethod SetupNamespace(nsName As %String) As %Status
